Fix overflow problems

--- a/app/assets/stylesheets/react.css.scss
+++ b/app/assets/stylesheets/react.css.scss
@@ -11,8 +11,12 @@ a {
 
 body {
     background-color: $bg;
+    height: 100vh;
+    overflow: hidden;
     #react-app {
+        height: 100%;
         #toolbar {
+            flex: 0 0 auto;
             background-color: $primary;
             .page-button {
                 border-bottom-width: 5px;
@@ -22,6 +26,21 @@ body {
                     background-color: #F57C00;
                     border-bottom-color: $secondary;
                 }
+            }
+        }
+        #page {
+            height: 0;
+            flex: 1 1 auto;
+            > #list {
+                height: 100%;
+                margin-bottom: 5px;
+                #listItems {
+                    flex: 1 1 auto;
+                    overflow-y: scroll;
+                }
+            }
+            > #details {
+                overflow-y: scroll;
             }
         }
         .editableItem {
